--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
       font-family: "Sour Gummy", system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color: var(--fg);
         /* Fondo con imagen */
-      background: url("./WeAre.jpg") no-repeat top center fixed;
+      background: url("https://i.postimg.cc/KjpV16Jp/WeAre.jpg") no-repeat top center fixed;
       background-size: cover;
 
       overflow: hidden;
