--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,15 @@
       --messageBoxBg: rgba(69, 93, 139, 0.6); /* Rosa oscuro translúcido */
     }
 
+    .cont-hh {
+      position: fixed;
+      width: 80%;
+      bottom: 20px; /* Movido a la parte superior */
+      left: 50%;
+      transform: translateX(-50%);
+    }
     h2, h3 {
-      align-self: center;
-      justify-self: center;
+      text-align: center;
       margin: 0;
       color: #2b8eff;
       text-shadow: #000000 1px 0 2px;
