--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
       bottom: 70px;
       left: 50%;
       transform: translateX(-50%);
+      margin-bottom: 40px;
     }
     h2, h3 {
       text-align: center;
